Fixed access to classpath resources