@@ -1,17 +1,16 @@
 package fr.ncasaux.camelplantuml.generator;
 
 import fr.ncasaux.camelplantuml.model.EndpointBaseUriInfo;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 
 import static fr.ncasaux.camelplantuml.processor.GetRoutesInfoProcessor.endpointBaseUriFilters;
 
@@ -19,9 +18,9 @@ public class EndpointsDiagramGenerator {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(EndpointsDiagramGenerator.class);
 
-    public static String generateUmlString(HashMap<String, EndpointBaseUriInfo> endpointBaseUrisInfo) throws URISyntaxException, IOException {
+    public static String generateUmlString(HashMap<String, EndpointBaseUriInfo> endpointBaseUrisInfo) throws IOException {
 
-        String umlEndpointTemplate = Files.readString(Paths.get(ClassLoader.getSystemResource("plantuml/endpointTemplate").toURI()), StandardCharsets.UTF_8);
+        String umlEndpointTemplate = IOUtils.toString(Objects.requireNonNull(EndpointsDiagramGenerator.class.getClassLoader().getResourceAsStream("plantuml/endpointTemplate")),StandardCharsets.UTF_8);
         String umlString = "";
 
         for (Map.Entry<String, EndpointBaseUriInfo> endpointInfoEntry : endpointBaseUrisInfo.entrySet()) {
