@@ -1,17 +1,16 @@
 package fr.ncasaux.camelplantuml.generator;
 
 import fr.ncasaux.camelplantuml.model.RouteInfo;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 
 import static fr.ncasaux.camelplantuml.processor.GetRoutesInfoProcessor.routeIdFilters;
 
@@ -19,9 +18,9 @@ public class RoutesDiagramGenerator {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(RoutesDiagramGenerator.class);
 
-    public static String generateUmlString(HashMap<String, RouteInfo> routesInfo) throws URISyntaxException, IOException {
+    public static String generateUmlString(HashMap<String, RouteInfo> routesInfo) throws IOException {
 
-        String umlRouteTemplate = Files.readString(Paths.get(ClassLoader.getSystemResource("plantuml/routeTemplate").toURI()), StandardCharsets.UTF_8);
+        String umlRouteTemplate = IOUtils.toString(Objects.requireNonNull(RoutesDiagramGenerator.class.getClassLoader().getResourceAsStream("plantuml/routeTemplate")),StandardCharsets.UTF_8);
         String umlString = "";
 
         for (Map.Entry<String, RouteInfo> routeInfoEntry : routesInfo.entrySet()) {
